# usd_plugins

./: .gitignore  CMakeLists.txt  README.md  setup_env.bat  setup_env.ps1
src/AssetInfoSchema/: generatedSchema.usda  plugInfo.json  schema.usda
src/AssetPathResolver/: CMakeLists.txt  api.h  debugCodes.cpp  debugCodes.h  plugInfo.json  resolver.cpp  resolver.h
tests/: create_test_assets.py  test_resolve.py  test_schema.py
